task6: jwt authorization and CORS
